Upgrade project to Symfony 2.1.*. Create new

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /vendor/
 /app/cache/
 /app/logs/
-/app/config/parameters.ini
+/app/config/parameters.yml
 /web/bundles/
 /nbproject
+/composer.lock
