--- a/src/bundles/GeniusDesign/CommonBundle/Resources/config/services.yml
+++ b/src/bundles/GeniusDesign/CommonBundle/Resources/config/services.yml
@@ -1,7 +1,9 @@
 parameters:
-#    genius_design_common.example.class: GeniusDesign\CommonBundle\Example
-
+    genius_design_upload.helper.class: GeniusDesign\NewsBundle\Helper\NewsHelper
+    
 services:
-#    genius_design_common.example:
-#        class: %genius_design_common.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    meritoo_news.helper:
+        class: %genius_design_news.helper.class%
+        arguments:
+            container: "@service_container"
+        shared: true
