GD - common abstract controller - added and implemented

--- a/src/bundles/GeniusDesign/BackendBundle/Resources/config/routing.yml
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/config/routing.yml
@@ -33,14 +33,12 @@ genius_content_list:
     defaults: {_controller: GeniusDesignBackendBundle:Content:list, language: ''}
     requirements:
         language: "[\w-]+"
-    
-    
-genius_test:
-    pattern: /test
-    defaults: {_controller: GeniusDesignBackendBundle:Default:index}
-    
+
+
 genius_homepage:
-    pattern: /
-    defaults: {_controller: GeniusDesignBackendBundle:Default:index}
+    pattern: /{language}
+    defaults: {_controller: GeniusDesignBackendBundle:Content:list, language: ''}
+    requirements:
+        language: "[\w-]+"
 
 
