--- a/src/bundles/GeniusDesign/CommonBundle/Resources/config/services.yml
+++ b/src/bundles/GeniusDesign/CommonBundle/Resources/config/services.yml
@@ -1,9 +1,17 @@
 parameters:
-    genius_design_upload.helper.class: GeniusDesign\NewsBundle\Helper\NewsHelper
+    genius_design_upload.helper.class: GeniusDesign\CommonBundle\Helper\UploadHelper
+    genius_design_common.twig.extension.class: GeniusDesign\CommonBundle\Twig\Extension\GeniusDesignCommonExtension
     
 services:
-    meritoo_news.helper:
-        class: %genius_design_news.helper.class%
+    genius_design_upload.helper:
+        class: %genius_design_upload.helper.class%
         arguments:
             container: "@service_container"
         shared: true
+    genius_design_common.twig.extension:
+        class: %genius_design_common.twig.extension.class%
+        arguments:
+            container: "@service_container"
+        shared: true
+        tags:
+            - {name: twig.extension}
