--- a/src/bundles/GeniusDesign/Components/ContentBundle/Resources/config/services.yml
+++ b/src/bundles/GeniusDesign/Components/ContentBundle/Resources/config/services.yml
@@ -3,7 +3,7 @@ parameters:
     genius_design_content.twig.extension.class: GeniusDesign\Components\ContentBundle\Twig\Extension\GeniusDesignContentExtension
     
 services:
-    meritoo_content.helper:
+    genius_design_content.helper:
         class: %genius_design_content.helper.class%
         arguments:
             container: "@service_container"
