--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -7,9 +7,10 @@ parameters:
     database_password: root
 
     mailer_transport:  smtp
-    mailer_host:       127.0.0.1
+    mailer_host:       ~
     mailer_user:       ~
     mailer_password:   ~
 
-    locale:            en
+    locale:            pl_PL
+    #locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
