--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,13 +79,16 @@ stof_doctrine_extensions:
             loggable: false
 
 genius_design_common:
-    language_request_parameter_name: languageCode
     date_format:
         form: dd.MM.yyyy
         datapicker: dd.mm.yy
         twig: d.m.Y
     deleted_files_path: %kernel.root_dir%/../web/deleted_files
 
+genius_design_components_language:
+    language_request_parameter_name: languageCode
+    default_language_code: pl
+    
 genius_design_components_news:
     showImage: true
     showAutor: true
