--- a/src/bundles/GeniusDesign/BackendBundle/Resources/config/routing.yml
+++ b/src/bundles/GeniusDesign/BackendBundle/Resources/config/routing.yml
@@ -11,56 +11,56 @@ genius_logout:
     
     
 genius_news_edit:
-    pattern: /aktualnosci/edycja/{newsSlug}/{language}
-    defaults: {_controller: GeniusDesignBackendBundle:News:edit, language: ''}
+    pattern: /{languageCode}/aktualnosci/edycja/{newsSlug}
+    defaults: {_controller: GeniusDesignBackendBundle:News:edit, languageCode: ''}
     requirements:
         contentSlug: "[\w-]+"
-        language: "[\w-]+"
+        languageCode: "[\w-]+"
         
 genius_news_add:
-    pattern: /aktualnosci/dodaj/{language}
-    defaults: {_controller: GeniusDesignBackendBundle:News:add, language: ''}
+    pattern: /{languageCode}/aktualnosci/dodaj
+    defaults: {_controller: GeniusDesignBackendBundle:News:add, languageCode: ''}
     requirements:
-        language: "[\w-]+"
+        languageCode: "[\w-]+"
 
 genius_news_delete:
-    pattern: /aktualnosci/usun/{newsSlug}/{language}
-    defaults: {_controller: GeniusDesignBackendBundle:News:delete, language: ''}
+    pattern: /{languageCode}/aktualnosci/usun/{newsSlug}
+    defaults: {_controller: GeniusDesignBackendBundle:News:delete, languageCode: ''}
     requirements:
         newsSlug: "[\w-]+"
-        language: "[\w-]+"
+        languageCode: "[\w-]+"
         
 genius_news_toggle_published:
-    pattern: /aktualnosci/przelacz/{newsSlug}/{language}
-    defaults: {_controller: GeniusDesignBackendBundle:News:togglePublished, language: ''}
+    pattern: /{languageCode}/aktualnosci/przelacz/{newsSlug}
+    defaults: {_controller: GeniusDesignBackendBundle:News:togglePublished, languageCode: ''}
     requirements:
         newsSlug: "[\w-]+"
-        language: "[\w-]+"
+        languageCode: "[\w-]+"
     
 genius_news_list:
-    pattern: /aktualnosci/{language}
-    defaults: {_controller: GeniusDesignBackendBundle:News:list, language: ''}
+    pattern: /{languageCode}/aktualnosci
+    defaults: {_controller: GeniusDesignBackendBundle:News:list, languageCode: ''}
 
 
 
 genius_content_edit:
-    pattern: /tresci/edycja/{contentSlug}/{language}
-    defaults: {_controller: GeniusDesignBackendBundle:Content:edit, language: ''}
+    pattern: /{languageCode}/tresci/edycja/{contentSlug}
+    defaults: {_controller: GeniusDesignBackendBundle:Content:edit, languageCode: ''}
     requirements:
         contentSlug: "[\w-]+"
-        language: "[\w-]+"
+        languageCode: "[\w-]+"
 
 genius_content_list:
-    pattern: /tresci/{language}
-    defaults: {_controller: GeniusDesignBackendBundle:Content:list, language: ''}
+    pattern: /{languageCode}/tresci
+    defaults: {_controller: GeniusDesignBackendBundle:Content:list, languageCode: ''}
     requirements:
-        language: "[\w-]+"
+        languageCode: "[\w-]+"
 
 
 genius_homepage:
-    pattern: /{language}
-    defaults: {_controller: GeniusDesignBackendBundle:Content:list, language: ''}
+    pattern: /{languageCode}
+    defaults: {_controller: GeniusDesignBackendBundle:Content:list, languageCode: ''}
     requirements:
-        language: "[\w-]+"
+        languageCode: "[\w-]+"
 
 
