--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,64 +8,64 @@ framework:
     translator:
         enabled: true
         fallback: pl
-    secret:          "%secret%"
+    secret:          %secret%
     router:
-        resource: "%kernel.root_dir%/config/routing.yml"
-        strict_requirements: "%kernel.debug%"
+        resource: %kernel.root_dir%/config/routing.yml
+        strict_requirements: %kernel.debug%
     form:            true
     csrf_protection: true
     validation:      { enable_annotations: true }
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
-    default_locale:  "%locale%"
+    default_locale:  %locale%
     trust_proxy_headers: false # Deprecated in 2.0; will be removed in 2.3 (used trusted_proxies instead)
     trusted_proxies: ~
-    session:  ~
+    session:         ~
 
 # Twig Configuration
 twig:
-    debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    debug:            %kernel.debug%
+    strict_variables: %kernel.debug%
 
 # Assetic Configuration
 assetic:
-    debug:          "%kernel.debug%"
+    debug:          %kernel.debug%
     use_controller: false
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
         #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
+        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   "%database_driver%"
-        host:     "%database_host%"
-        port:     "%database_port%"
-        dbname:   "%database_name%"
-        user:     "%database_user%"
-        password: "%database_password%"
+        driver:   %database_driver%
+        host:     %database_host%
+        port:     %database_port%
+        dbname:   %database_name%
+        user:     %database_user%
+        password: %database_password%
         charset:  UTF8
 
     orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
+        auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
         mappings:
             translatable:
                 type: annotation
                 alias: Gedmo
                 prefix: Gedmo\Translatable\Entity
-                dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity"
+                dir: %kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
+    transport: %mailer_transport%
+    host:      %mailer_host%
+    username:  %mailer_user%
+    password:  %mailer_password%
     spool:     { type: memory }
     
 stof_doctrine_extensions:
@@ -84,6 +84,14 @@ genius_design_common:
         datapicker: dd.mm.yy
         twig: d.m.Y
     deleted_files_path: %kernel.root_dir%/../web/deleted_files
+    no_picture:
+        template_path: /upload/common/no-picture-%s.png
+        sizes:
+          - {name: big}
+          - {name: medium}
+          - {name: small}
+          - {name: tiny}
+          - {name: very-tiny}
 
 genius_design_components_language:
     language_request_parameter_name: languageCode
