Menu Bundle - added

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,6 +59,11 @@ doctrine:
                 alias: Gedmo
                 prefix: Gedmo\Translatable\Entity
                 dir: %kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity
+            tree:
+                type: annotation
+                alias: Gedmo
+                prefix: Gedmo\Tree\Entity
+                dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Tree/Entity"
 
 # Swiftmailer Configuration
 swiftmailer:
