--- a/app/config/services-doctrine_extensions.yml
+++ b/app/config/services-doctrine_extensions.yml
@@ -2,6 +2,13 @@
 # imported in config.yml
 
 services:
+    gedmo.listener.tree:
+        class: Gedmo\Tree\TreeListener
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
+        calls:
+            - [ setAnnotationReader, [ @annotation_reader ] ]
+  
     gedmo.listener.sluggable:
         class: Gedmo\Sluggable\SluggableListener
         tags:
