--- a/src/bundles/GeniusDesign/FrontendBundle/Resources/config/services.yml
+++ b/src/bundles/GeniusDesign/FrontendBundle/Resources/config/services.yml
@@ -1,7 +1,11 @@
 parameters:
-#    genius_design_frontend.example.class: GeniusDesign\FrontendBundle\Example
-
+    genius_design_frontend.twig.extension.class: GeniusDesign\FrontendBundle\Twig\Extension\GeniusDesignFrontendExtension
+    
 services:
-#    genius_design_frontend.example:
-#        class: %genius_design_frontend.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    genius_design_frontend.twig.extension:
+        class: %genius_design_frontend.twig.extension.class%
+        arguments:
+            container: "@service_container"
+        shared: true
+        tags:
+            - {name: twig.extension}
