--- a/src/bundles/GeniusDesign/Components/SimpleUserBundle/Resources/config/services.yml
+++ b/src/bundles/GeniusDesign/Components/SimpleUserBundle/Resources/config/services.yml
@@ -1,7 +1,17 @@
 parameters:
-#    genius_design_components_simple_user.example.class: GeniusDesign\Components\SimpleUserBundle\Example
-
+    genius_design_simple_user.helper.class: GeniusDesign\Components\SimpleUserBundle\Helper\SimpleUserHelper
+    genius_design_simple_user.twig.extension.class: GeniusDesign\Components\SimpleUserBundle\Twig\Extension\GeniusDesignSimpleUserExtension
+    
 services:
-#    genius_design_components_simple_user.example:
-#        class: %genius_design_components_simple_user.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    genius_design_simple_user.helper:
+        class: %genius_design_simple_user.helper.class%
+        arguments:
+            container: "@service_container"
+        shared: true
+    genius_design_simple_user.twig.extension:
+        class: %genius_design_simple_user.twig.extension.class%
+        arguments:
+            container: "@service_container"
+        shared: true
+        tags:
+            - {name: twig.extension}
